--- a/notebooks/resnet/resnet.ipynb
+++ b/notebooks/resnet/resnet.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -48,13 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "The tensorboard extension is already loaded. To reload it, use:\n  %reload_ext tensorboard\n"
+    }
+   ],
    "source": [
     "%load_ext tensorboard\n",
     "\n",
@@ -105,24 +112,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Tensor._shape is private, use Tensor.shape instead. Tensor._shape will eventually be removed.\n",
-      "WARNING:tensorflow:Tensor._shape is private, use Tensor.shape instead. Tensor._shape will eventually be removed.\n",
-      "WARNING:tensorflow:Tensor._shape is private, use Tensor.shape instead. Tensor._shape will eventually be removed.\n",
-      "WARNING:tensorflow:Tensor._shape is private, use Tensor.shape instead. Tensor._shape will eventually be removed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def res_net_block(input, filters, conv_size):\n",
     "    x = keras.layers.Conv2D(filters, conv_size, activation='relu', padding='same')(input)\n",
@@ -157,13 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Epoch 1/30\n  1/195 [..............................] - ETA: 0s - loss: 3.0956 - acc: 0.0469"
+    }
+   ],
    "source": [
     "callbacks = [\n",
     "  # Write TensorBoard logs to `./logs` directory\n",
@@ -193,14 +196,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "outputs": [],
-   "source": [],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -226,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
