--- a/development.ipynb
+++ b/development.ipynb
@@ -369,6 +369,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "sum([layer.output_shape[3] for layer in model.layers[1].layers if isinstance(layer, tf.keras.layers.LeakyReLU)])\n",
     "backbone.get_layer('conv5_block3_out').output"
    ],
    "metadata": {
