--- a/notebooks/data_expoloration/yolo.ipynb
+++ b/notebooks/data_expoloration/yolo.ipynb
@@ -1,178 +1,175 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Conv2D, Input, LeakyReLU, ZeroPadding2D, BatchNormalization, MaxPool2D, Add, DepthwiseConv2D\n",
-    "from tensorflow.keras import backend as K\n",
-    "from matplotlib import pyplot as plt\n",
-    "from PIL import Image\n",
-    "from functools import wraps, partial, reduce\n",
-    "from tensorflow import zeros\n",
-    "from tensorflow.keras import Input, Model\n",
-    "\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import tensorboard\n",
-    "\n",
-    "physical_devices = tf.config.experimental.list_physical_devices('GPU') \n",
-    "for physical_device in physical_devices: \n",
-    "    tf.config.experimental.set_memory_growth(physical_device, True)\n",
-    "from tensorflow.python.keras.regularizers import l2\n",
-    "\n",
-    "%load_ext tensorboard\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_DarknetConv2D = partial(Conv2D, padding='same')\n",
-    "\n",
-    "@wraps(Conv2D)\n",
-    "def darknet_conv_2d(*args, **kwargs):\n",
-    "    default_dict = {'kernel_regularizer': l2(5e-4)}\n",
-    "    default_dict.update(kwargs)\n",
-    "    return _DarknetConv2D(*args, **default_dict)\n",
-    "\n",
-    "\n",
-    "# Partial wrapper for Convolution2D with static default argument.\n",
-    "_DarknetConv2D = partial(Conv2D, padding='same')\n",
-    "\n",
-    "\n",
-    "def compose(*funcs):\n",
-    "    \"\"\"Compose arbitrarily many functions, evaluated left to right.\n",
-    "    Reference: https://mathieularose.com/function-composition-in-python/\n",
-    "    \"\"\"\n",
-    "    # return lambda x: reduce(lambda v, f: f(v), funcs, x)\n",
-    "    if funcs:\n",
-    "        return reduce(lambda f, g: lambda *a, **kw: g(f(*a, **kw)), funcs)\n",
-    "    else:\n",
-    "        raise ValueError('Composition of empty sequence not supported.')\n",
-    "\n",
-    "\n",
-    "@wraps(Conv2D)\n",
-    "def DarknetConv2D(*args, **kwargs):\n",
-    "    \"\"\"Wrapper to set Darknet weight regularizer for Convolution2D.\"\"\"\n",
-    "    darknet_conv_kwargs = {'kernel_regularizer': l2(5e-4)}\n",
-    "    darknet_conv_kwargs.update(kwargs)\n",
-    "    return _DarknetConv2D(*args, **darknet_conv_kwargs)\n",
-    "\n",
-    "\n",
-    "@wraps(DepthwiseConv2D)\n",
-    "def DarknetDepthwiseConv2D(*args, **kwargs):\n",
-    "    \"\"\"Wrapper to set Darknet parameters for Convolution2D.\"\"\"\n",
-    "    darknet_conv_kwargs = {'kernel_regularizer': l2(5e-4)}\n",
-    "    darknet_conv_kwargs['padding'] = 'valid' if kwargs.get('strides')==(2,2) else 'same'\n",
-    "    darknet_conv_kwargs.update(kwargs)\n",
-    "    return DepthwiseConv2D(*args, **darknet_conv_kwargs)\n",
-    "\n",
-    "\n",
-    "def Darknet_Depthwise_Separable_Conv2D_BN_Leaky(filters, kernel_size=(3, 3), block_id_str=None, **kwargs):\n",
-    "    \"\"\"Depthwise Separable Convolution2D.\"\"\"\n",
-    "    if not block_id_str:\n",
-    "        block_id_str = str(K.get_uid())\n",
-    "    no_bias_kwargs = {'use_bias': False}\n",
-    "    no_bias_kwargs.update(kwargs)\n",
-    "    return compose(\n",
-    "        DarknetDepthwiseConv2D(kernel_size, name='conv_dw_' + block_id_str, **no_bias_kwargs),\n",
-    "        BatchNormalization(name='conv_dw_%s_bn' % block_id_str),\n",
-    "        LeakyReLU(alpha=0.1, name='conv_dw_%s_leaky_relu' % block_id_str),\n",
-    "        Conv2D(filters, (1,1), padding='same', use_bias=False, strides=(1, 1), name='conv_pw_%s' % block_id_str),\n",
-    "        BatchNormalization(name='conv_pw_%s_bn' % block_id_str),\n",
-    "        LeakyReLU(alpha=0.1, name='conv_pw_%s_leaky_relu' % block_id_str))\n",
-    "\n",
-    "\n",
-    "def Depthwise_Separable_Conv2D_BN_Leaky(filters, kernel_size=(3, 3), block_id_str=None):\n",
-    "    \"\"\"Depthwise Separable Convolution2D.\"\"\"\n",
-    "    if not block_id_str:\n",
-    "        block_id_str = str(K.get_uid())\n",
-    "    return compose(\n",
-    "        DepthwiseConv2D(kernel_size, padding='same', name='conv_dw_' + block_id_str),\n",
-    "        BatchNormalization(name='conv_dw_%s_bn' % block_id_str),\n",
-    "        LeakyReLU(alpha=0.1, name='conv_dw_%s_leaky_relu' % block_id_str),\n",
-    "        Conv2D(filters, (1,1), padding='same', use_bias=False, strides=(1, 1), name='conv_pw_%s' % block_id_str),\n",
-    "        BatchNormalization(name='conv_pw_%s_bn' % block_id_str),\n",
-    "        LeakyReLU(alpha=0.1, name='conv_pw_%s_leaky_relu' % block_id_str))\n",
-    "\n",
-    "\n",
-    "def DarknetConv2D_BN_Leaky(*args, **kwargs):\n",
-    "    \"\"\"Darknet Convolution2D followed by BatchNormalization and LeakyReLU.\"\"\"\n",
-    "    no_bias_kwargs = {'use_bias': False}\n",
-    "    no_bias_kwargs.update(kwargs)\n",
-    "    return compose(\n",
-    "        DarknetConv2D(*args, **no_bias_kwargs),\n",
-    "        BatchNormalization(),\n",
-    "        LeakyReLU(alpha=0.1))\n",
-    "\n",
-    "\n",
-    "def bottleneck_block(outer_filters, bottleneck_filters):\n",
-    "    \"\"\"Bottleneck block of 3x3, 1x1, 3x3 convolutions.\"\"\"\n",
-    "    return compose(\n",
-    "        DarknetConv2D_BN_Leaky(outer_filters, (3, 3)),\n",
-    "        DarknetConv2D_BN_Leaky(bottleneck_filters, (1, 1)),\n",
-    "        DarknetConv2D_BN_Leaky(outer_filters, (3, 3)))\n",
-    "\n",
-    "\n",
-    "def bottleneck_x2_block(outer_filters, bottleneck_filters):\n",
-    "    \"\"\"Bottleneck block of 3x3, 1x1, 3x3, 1x1, 3x3 convolutions.\"\"\"\n",
-    "    return compose(\n",
-    "        bottleneck_block(outer_filters, bottleneck_filters),\n",
-    "        DarknetConv2D_BN_Leaky(bottleneck_filters, (1, 1)),\n",
-    "        DarknetConv2D_BN_Leaky(outer_filters, (3, 3)))\n",
-    "\n",
-    "\n",
-    "def space_to_depth_x2(x):\n",
-    "    \"\"\"Thin wrapper for Tensorflow space_to_depth with block_size=2.\"\"\"\n",
-    "    # Import currently required to make Lambda work.\n",
-    "    # See: https://github.com/fchollet/keras/issues/5088#issuecomment-273851273\n",
-    "    import tensorflow as tf\n",
-    "    return tf.nn.space_to_depth(x, block_size=2)\n",
-    "\n",
-    "\n",
-    "def space_to_depth_x2_output_shape(input_shape):\n",
-    "    \"\"\"Determine space_to_depth output shape for block_size=2.\n",
-    "    Note: For Lambda with TensorFlow backend, output shape may not be needed.\n",
-    "    \"\"\"\n",
-    "    return (input_shape[0], input_shape[1] // 2, input_shape[2] // 2, 4 *\n",
-    "            input_shape[3]) if input_shape[1] else (input_shape[0], None, None,\n",
-    "                                                    4 * input_shape[3])\n",
-    "                                                    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def darknet53(input_shape, input_tensor, include_top: boolean = true, classes=1000, **kwargs):\n",
-    "    "
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": 3
-  },
-  "orig_nbformat": 2
- },
- "nbformat": 4,
- "nbformat_minor": 2
+    "cells": [
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import tensorflow as tf\n",
+                "from tensorflow.keras.layers import Conv2D, Input, LeakyReLU, ZeroPadding2D, BatchNormalization, MaxPool2D, Add, DepthwiseConv2D\n",
+                "from tensorflow.keras import backend as K\n",
+                "from matplotlib import pyplot as plt\n",
+                "from PIL import Image\n",
+                "from functools import wraps, partial, reduce\n",
+                "from tensorflow import zeros\n",
+                "from tensorflow.keras import Input, Model\n",
+                "\n",
+                "import pandas as pd\n",
+                "import matplotlib.pyplot as plt\n",
+                "import seaborn as sns\n",
+                "import tensorboard\n",
+                "\n",
+                "physical_devices = tf.config.experimental.list_physical_devices('GPU') \n",
+                "for physical_device in physical_devices: \n",
+                "    tf.config.experimental.set_memory_growth(physical_device, True)\n",
+                "from tensorflow.python.keras.regularizers import l2\n",
+                "\n",
+                "%load_ext tensorboard\n",
+            ],
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "_DarknetConv2D = partial(Conv2D, padding='same')\n",
+                "\n",
+                "@wraps(Conv2D)\n",
+                "def darknet_conv_2d(*args, **kwargs):\n",
+                "    default_dict = {'kernel_regularizer': l2(5e-4)}\n",
+                "    default_dict.update(kwargs)\n",
+                "    return _DarknetConv2D(*args, **default_dict)\n",
+                "\n",
+                "\n",
+                "# Partial wrapper for Convolution2D with static default argument.\n",
+                "_DarknetConv2D = partial(Conv2D, padding='same')\n",
+                "\n",
+                "\n",
+                "def compose(*funcs):\n",
+                '    """Compose arbitrarily many functions, evaluated left to right.\n',
+                "    Reference: https://mathieularose.com/function-composition-in-python/\n",
+                '    """\n',
+                "    # return lambda x: reduce(lambda v, f: f(v), funcs, x)\n",
+                "    if funcs:\n",
+                "        return reduce(lambda f, g: lambda *a, **kw: g(f(*a, **kw)), funcs)\n",
+                "    else:\n",
+                "        raise ValueError('Composition of empty sequence not supported.')\n",
+                "\n",
+                "\n",
+                "@wraps(Conv2D)\n",
+                "def DarknetConv2D(*args, **kwargs):\n",
+                '    """Wrapper to set darknet_backbone weight regularizer for Convolution2D."""\n',
+                "    darknet_conv_kwargs = {'kernel_regularizer': l2(5e-4)}\n",
+                "    darknet_conv_kwargs.update(kwargs)\n",
+                "    return _DarknetConv2D(*args, **darknet_conv_kwargs)\n",
+                "\n",
+                "\n",
+                "@wraps(DepthwiseConv2D)\n",
+                "def DarknetDepthwiseConv2D(*args, **kwargs):\n",
+                '    """Wrapper to set darknet_backbone parameters for Convolution2D."""\n',
+                "    darknet_conv_kwargs = {'kernel_regularizer': l2(5e-4)}\n",
+                "    darknet_conv_kwargs['padding'] = 'valid' if kwargs.get('strides')==(2,2) else 'same'\n",
+                "    darknet_conv_kwargs.update(kwargs)\n",
+                "    return DepthwiseConv2D(*args, **darknet_conv_kwargs)\n",
+                "\n",
+                "\n",
+                "def Darknet_Depthwise_Separable_Conv2D_BN_Leaky(filters, kernel_size=(3, 3), block_id_str=None, **kwargs):\n",
+                '    """Depthwise Separable Convolution2D."""\n',
+                "    if not block_id_str:\n",
+                "        block_id_str = str(K.get_uid())\n",
+                "    no_bias_kwargs = {'use_bias': False}\n",
+                "    no_bias_kwargs.update(kwargs)\n",
+                "    return compose(\n",
+                "        DarknetDepthwiseConv2D(kernel_size, name='conv_dw_' + block_id_str, **no_bias_kwargs),\n",
+                "        BatchNormalization(name='conv_dw_%s_bn' % block_id_str),\n",
+                "        LeakyReLU(alpha=0.1, name='conv_dw_%s_leaky_relu' % block_id_str),\n",
+                "        Conv2D(filters, (1,1), padding='same', use_bias=False, strides=(1, 1), name='conv_pw_%s' % block_id_str),\n",
+                "        BatchNormalization(name='conv_pw_%s_bn' % block_id_str),\n",
+                "        LeakyReLU(alpha=0.1, name='conv_pw_%s_leaky_relu' % block_id_str))\n",
+                "\n",
+                "\n",
+                "def Depthwise_Separable_Conv2D_BN_Leaky(filters, kernel_size=(3, 3), block_id_str=None):\n",
+                '    """Depthwise Separable Convolution2D."""\n',
+                "    if not block_id_str:\n",
+                "        block_id_str = str(K.get_uid())\n",
+                "    return compose(\n",
+                "        DepthwiseConv2D(kernel_size, padding='same', name='conv_dw_' + block_id_str),\n",
+                "        BatchNormalization(name='conv_dw_%s_bn' % block_id_str),\n",
+                "        LeakyReLU(alpha=0.1, name='conv_dw_%s_leaky_relu' % block_id_str),\n",
+                "        Conv2D(filters, (1,1), padding='same', use_bias=False, strides=(1, 1), name='conv_pw_%s' % block_id_str),\n",
+                "        BatchNormalization(name='conv_pw_%s_bn' % block_id_str),\n",
+                "        LeakyReLU(alpha=0.1, name='conv_pw_%s_leaky_relu' % block_id_str))\n",
+                "\n",
+                "\n",
+                "def DarknetConv2D_BN_Leaky(*args, **kwargs):\n",
+                '    """darknet_backbone Convolution2D followed by BatchNormalization and LeakyReLU."""\n',
+                "    no_bias_kwargs = {'use_bias': False}\n",
+                "    no_bias_kwargs.update(kwargs)\n",
+                "    return compose(\n",
+                "        DarknetConv2D(*args, **no_bias_kwargs),\n",
+                "        BatchNormalization(),\n",
+                "        LeakyReLU(alpha=0.1))\n",
+                "\n",
+                "\n",
+                "def bottleneck_block(outer_filters, bottleneck_filters):\n",
+                '    """Bottleneck block of 3x3, 1x1, 3x3 convolutions."""\n',
+                "    return compose(\n",
+                "        DarknetConv2D_BN_Leaky(outer_filters, (3, 3)),\n",
+                "        DarknetConv2D_BN_Leaky(bottleneck_filters, (1, 1)),\n",
+                "        DarknetConv2D_BN_Leaky(outer_filters, (3, 3)))\n",
+                "\n",
+                "\n",
+                "def bottleneck_x2_block(outer_filters, bottleneck_filters):\n",
+                '    """Bottleneck block of 3x3, 1x1, 3x3, 1x1, 3x3 convolutions."""\n',
+                "    return compose(\n",
+                "        bottleneck_block(outer_filters, bottleneck_filters),\n",
+                "        DarknetConv2D_BN_Leaky(bottleneck_filters, (1, 1)),\n",
+                "        DarknetConv2D_BN_Leaky(outer_filters, (3, 3)))\n",
+                "\n",
+                "\n",
+                "def space_to_depth_x2(x):\n",
+                '    """Thin wrapper for Tensorflow space_to_depth with block_size=2."""\n',
+                "    # Import currently required to make Lambda work.\n",
+                "    # See: https://github.com/fchollet/keras/issues/5088#issuecomment-273851273\n",
+                "    import tensorflow as tf\n",
+                "    return tf.nn.space_to_depth(x, block_size=2)\n",
+                "\n",
+                "\n",
+                "def space_to_depth_x2_output_shape(input_shape):\n",
+                '    """Determine space_to_depth output shape for block_size=2.\n',
+                "    Note: For Lambda with TensorFlow backend, output shape may not be needed.\n",
+                '    """\n',
+                "    return (input_shape[0], input_shape[1] // 2, input_shape[2] // 2, 4 *\n",
+                "            input_shape[3]) if input_shape[1] else (input_shape[0], None, None,\n",
+                "                                                    4 * input_shape[3])\n",
+                "                                                    ",
+            ],
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "def darknet53(input_shape, input_tensor, include_top: boolean = true, classes=1000, **kwargs):\n",
+                "    ",
+            ],
+        },
+    ],
+    "metadata": {
+        "language_info": {
+            "codemirror_mode": {"name": "ipython", "version": 3},
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": 3,
+        },
+        "orig_nbformat": 2,
+    },
+    "nbformat": 4,
+    "nbformat_minor": 2,
 }
